--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
   "license": "ISC",
   "dependencies": {
     "@david-vloedman/mymongomodel": "^1.0.2",
+    "base-64": "^0.1.0",
     "bcrypt": "^3.0.7",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
     "express": "^4.17.1",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^6.2.3",
+    "mongoose": "^5.8.9"
   }
 }
