--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^6.2.3",
     "mongoose": "^5.8.9",
-    "superagent": "^5.2.1"
+    "morgan": "^1.9.1",
+    "superagent": "^5.2.1",
+    "swagger-ui-express": "^4.1.3"
   }
 }
